tests/out/error/redef/const.in.bt
const MY_CONST := 123
const MY_CONST := 'foo'
