tests/out/error/redef/const.out
tests/out/error/redef/const.in.bt:3:1 error: redefinition of `MY_CONST`
